src/objects/inscor__Aircraft_Engine_Listing__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Aircraft Engine Listings</relationshipLabel>
        <relationshipName>Aircraft_Engine_Listings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Aircraft_Family__c</fullName>
        <label>Aircraft Family</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Aircraft_Model__c</fullName>
        <label>Aircraft Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Aircraft_Qty__c</fullName>
        <label>Aircraft Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Aircraft_Reg__c</fullName>
        <label>Aircraft Reg</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Aircraft_S_N__c</fullName>
        <label>Aircraft S/N</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Engine_Family__c</fullName>
        <label>Engine Family</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Engine_Model__c</fullName>
        <label>Engine Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Engine_Qty__c</fullName>
        <label>Engine Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Engine_S_N__c</fullName>
        <label>Engine S/N</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Mfr_Date__c</fullName>
        <label>Mfr Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Operator__c</fullName>
        <label>Operator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Registered_Owner__c</fullName>
        <label>Registered Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Parked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Aircraft Engine Listing</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Aircraft_Model__c</columns>
        <columns>inscor__Aircraft_Family__c</columns>
        <columns>inscor__Engine_Model__c</columns>
        <columns>inscor__Engine_Family__c</columns>
        <columns>inscor__Operator__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>inscor__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AEL-{0000}</displayFormat>
        <label>Aircraft Engine Listing Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aircraft Engine Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>